--- a/Places/app/src/main/res/layout/activity_login.xml
+++ b/Places/app/src/main/res/layout/activity_login.xml
@@ -78,5 +78,14 @@
         android:textStyle="bold"
         android:text="@string/sign_up" />
 
+    <ProgressBar
+        android:id="@+id/loading"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/etPassword"
+        android:indeterminateTint="@color/white"
+        android:visibility="gone" />
+
 
 </RelativeLayout>
