--- a/Places/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/Places/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,13 +7,23 @@
         android:title="@string/title_home" />
 
     <item
-        android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="@string/title_dashboard" />
+        android:id="@+id/navigation_liked"
+        android:icon="@drawable/icon_like"
+        android:title="@string/title_liked" />
 
     <item
-        android:id="@+id/navigation_notifications"
-        android:icon="@drawable/ic_notifications_black_24dp"
-        android:title="@string/title_notifications" />
+        android:id="@+id/navigation_search"
+        android:icon="@drawable/icon_search"
+        android:title="@string/title_search" />
+
+    <item
+        android:id="@+id/navigation_recommend"
+        android:icon="@drawable/icon_star"
+        android:title="@string/title_recommend" />
+
+    <item
+        android:id="@+id/navigation_profile"
+        android:icon="@drawable/icon_profile"
+        android:title="@string/title_profile" />
 
 </menu>
