--- a/Places/app/src/main/res/layout/activity_create_place.xml
+++ b/Places/app/src/main/res/layout/activity_create_place.xml
@@ -1,108 +1,122 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".CreatePlace"
-    android:background="@color/white"
-    android:padding="10dp">
+    android:id="@+id/scrollView">
 
-    <TextView
-        android:id="@+id/tvName"
+    <RelativeLayout
+        android:layout_height="match_parent"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/name"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:textSize="18sp"/>
+        android:background="@color/white"
+        android:padding="10dp">
 
-    <EditText
-        android:id="@+id/etName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvName"
-        android:inputType="text"
-        android:hint="@string/name" />
+        <TextView
+            android:id="@+id/tvName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/name"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:textSize="18sp"/>
 
-    <TextView
-        android:id="@+id/tvDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="@string/description"
-        android:layout_below="@id/etName"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:textSize="18sp"/>
+        <EditText
+            android:id="@+id/etName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvName"
+            android:inputType="text"
+            android:hint="@string/name" />
 
-    <EditText
-        android:id="@+id/etDescription"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvDescription"
-        android:minLines="3"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        android:hint="@string/description" />
+        <TextView
+            android:id="@+id/tvDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="@string/description"
+            android:layout_below="@id/etName"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:textSize="18sp"/>
 
-    <TextView
-        android:id="@+id/tvPrice"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="@string/price"
-        android:layout_below="@id/etDescription"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:textSize="18sp"/>
+        <EditText
+            android:id="@+id/etDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvDescription"
+            android:minLines="3"
+            android:gravity="start|top"
+            android:inputType="textMultiLine"
+            android:hint="@string/description" />
 
-    <RatingBar
-        android:id="@+id/rbPrice"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvPrice"
-        android:numStars="5"
-        android:stepSize="1" />
+        <TextView
+            android:id="@+id/tvPrice"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="@string/price"
+            android:layout_below="@id/etDescription"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:textSize="18sp"/>
 
-    <TextView
-        android:id="@+id/tvAddress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:text="@string/address"
-        android:layout_below="@id/rbPrice"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:textSize="18sp"/>
+        <RatingBar
+            android:id="@+id/rbPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvPrice"
+            android:numStars="5"
+            android:stepSize="1" />
 
-    <EditText
-        android:id="@+id/etAddress"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvAddress"
-        android:minLines="2"
-        android:gravity="start|top"
-        android:inputType="textMultiLine"
-        android:hint="@string/address" />
 
-    <TextView
-        android:id="@+id/tvPhoneNumber"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/etAddress"
-        android:text="@string/phone_number"
-        android:textStyle="bold"
-        android:textColor="@color/black"
-        android:textSize="18sp"/>
+        <TextView
+            android:id="@+id/tvPhoneNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/rbPrice"
+            android:text="@string/phone_number"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:textSize="18sp"/>
 
-    <EditText
-        android:id="@+id/etPhoneNumber"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvPhoneNumber"
-        android:inputType="phone"
-        android:hint="@string/phone_number" />
+        <EditText
+            android:id="@+id/etPhoneNumber"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvPhoneNumber"
+            android:inputType="phone"
+            android:hint="@string/phone_number" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/tvAddress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_below="@id/etPhoneNumber"
+            android:text="@string/address"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:textSize="18sp"/>
+
+        <EditText
+            android:id="@+id/etAddress"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvAddress"
+            android:minLines="2"
+            android:gravity="start|top"
+            android:inputType="textMultiLine"
+            android:hint="@string/address" />
+
+        <fragment
+            android:id="@+id/map"
+            class="com.example.places.WorkaroundMapFragment"
+            android:layout_width="match_parent"
+            android:layout_height="500dp"
+            android:layout_below="@id/etAddress" />
+
+    </RelativeLayout>
+</ScrollView>
