--- a/Places/app/src/main/res/layout/activity_create_place.xml
+++ b/Places/app/src/main/res/layout/activity_create_place.xml
@@ -77,6 +77,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/rbPrice"
+            android:layout_marginTop="15dp"
             android:text="@string/phone_number"
             android:textStyle="bold"
             android:textColor="@color/black"
@@ -111,12 +112,24 @@
             android:inputType="textMultiLine"
             android:hint="@string/address" />
 
+        <TextView
+            android:id="@+id/tvLocation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="5dp"
+            android:layout_below="@id/etAddress"
+            android:text="@string/choose_location"
+            android:textStyle="bold"
+            android:textColor="@color/black"
+            android:textSize="18sp"/>
+
         <fragment
             android:id="@+id/map"
             class="com.example.places.WorkaroundMapFragment"
             android:layout_width="match_parent"
             android:layout_height="500dp"
-            android:layout_below="@id/etAddress" />
+            android:layout_below="@id/tvLocation" />
 
     </RelativeLayout>
 </ScrollView>
