take picture implemented

--- a/Places/app/src/main/res/layout/activity_create_place.xml
+++ b/Places/app/src/main/res/layout/activity_create_place.xml
@@ -131,5 +131,49 @@
             android:layout_height="500dp"
             android:layout_below="@id/tvLocation" />
 
+        <RelativeLayout
+            android:id="@+id/rlImage"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_margin="20dp"
+            android:layout_below="@id/map" >
+
+            <TextView
+                android:id="@+id/tvImage"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="5dp"
+                android:text="@string/take_a_picture"
+                android:textStyle="bold"
+                android:textColor="@color/black"
+                android:textSize="18sp"/>
+
+            <androidx.camera.view.PreviewView
+                android:id="@+id/pvImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_below="@id/tvImage"/>
+
+            <ImageView
+                android:id="@+id/ivImage"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="gone"
+                android:layout_below="@id/tvImage"
+                tools:srcCompat="@tools:sample/avatars" />
+
+        </RelativeLayout>
+
+        <Button
+            android:id="@+id/btnImage"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:layout_below="@id/rlImage"
+            android:backgroundTint="@color/primary"
+            android:textAllCaps="true"
+            android:text="@string/take_picture" />
+
     </RelativeLayout>
 </ScrollView>
