--- a/Places/app/src/main/res/layout/item_search_result.xml
+++ b/Places/app/src/main/res/layout/item_search_result.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:paddingVertical="10dp"
+    android:id="@+id/rlItem"
     xmlns:tools="http://schemas.android.com/tools">
 
     <ImageView
