--- a/Places/app/src/main/res/layout/activity_profile.xml
+++ b/Places/app/src/main/res/layout/activity_profile.xml
@@ -90,4 +90,11 @@
         android:layout_marginTop="20dp"
         android:layout_below="@id/tvFollowersCount" />
 
+    <ProgressBar
+        android:id="@+id/loading"
+        android:visibility="gone"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
 </RelativeLayout>
