--- a/Places/app/src/main/res/layout/activity_place_detail.xml
+++ b/Places/app/src/main/res/layout/activity_place_detail.xml
@@ -74,7 +74,7 @@
             android:layout_marginEnd="5dp"
             android:backgroundTint="@color/white"
             android:clickable="true"
-            app:tint="@color/black"
+            android:tint="@color/black"
             app:srcCompat="@drawable/icon_like" />
 
         <TextView
