--- a/Places/app/src/main/res/layout/profile_fragment.xml
+++ b/Places/app/src/main/res/layout/profile_fragment.xml
@@ -1,13 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.profile.ProfileFragment">
 
+    <ImageView
+        android:id="@+id/ivProfilePicture"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="10dp" />
+
     <TextView
+        android:id="@+id/tvName"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        android:layout_below="@id/ivProfilePicture"
+        android:layout_marginStart="10dp"
+        tools:text="Pablo Blanco"/>
+
+    <TextView
+        android:id="@+id/tvUsername"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvName"
+        android:layout_marginStart="10dp"
+        tools:text="\@pablo" />
+
+    <TextView
+        android:id="@+id/tvBio"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvUsername"
+        android:layout_marginHorizontal="10dp"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        android:layout_marginVertical="10dp"
+        tools:text="Esta es mi bio" />
+
+    <TextView
+        android:id="@+id/tvFollowersCount"
+        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_below="@id/tvBio"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        tools:text="Followers: 0"/>
+
+    <TextView
+        android:id="@+id/tvFollowingCount"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/tvBio"
+        android:layout_toEndOf="@id/tvFollowersCount"
+        android:gravity="center"
+        android:textColor="@color/black"
+        android:textStyle="bold"
+        tools:text="Following: 0"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvPlaces"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Hello" />
+        android:layout_marginTop="20dp"
+        android:layout_below="@id/tvFollowersCount" />
 
-</FrameLayout>
+    <ProgressBar
+        android:id="@+id/loading"
+        android:visibility="gone"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</RelativeLayout>
