--- a/Places/app/src/main/res/layout/activity_take_picture.xml
+++ b/Places/app/src/main/res/layout/activity_take_picture.xml
@@ -71,4 +71,12 @@
         android:layout_marginEnd="50dp"
         android:text="@string/post" />
 
+    <ProgressBar
+        android:id="@+id/loading"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/rlImage"
+        android:visibility="gone"/>
+
 </RelativeLayout>
