--- a/Places/app/src/main/res/layout/profile_fragment.xml
+++ b/Places/app/src/main/res/layout/profile_fragment.xml
@@ -6,12 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".ui.profile.ProfileFragment">
 
+    <TextView
+        android:id="@+id/info"
+        android:layout_marginVertical="5dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/update_info"/>
+
     <ImageView
         android:id="@+id/ivProfilePicture"
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginTop="20dp"
-        android:layout_marginStart="10dp" />
+        android:layout_below="@id/info"
+        android:layout_marginStart="10dp"
+        android:layout_marginBottom="10dp"/>
 
     <TextView
         android:id="@+id/tvName"
