:rocket: implemented Find Nearby

--- a/Places/app/src/main/res/menu/main_menu.xml
+++ b/Places/app/src/main/res/menu/main_menu.xml
@@ -20,6 +20,12 @@
         app:actionLayout="@layout/progress_bar" />
 
     <item
+        android:id="@+id/findNearby"
+        app:showAsAction="never"
+        android:actionLayout="@layout/activity_main"
+        android:title="@string/find_nearby" />
+
+    <item
         android:id="@+id/saved"
         app:showAsAction="never"
         android:actionLayout="@layout/activity_main"
