--- a/Places/app/src/main/res/layout/fragment_home.xml
+++ b/Places/app/src/main/res/layout/fragment_home.xml
@@ -23,7 +23,7 @@
         android:layout_marginTop="30dp"
         android:textSize="16sp"
         android:visibility="gone"
-        android:text="@string/no_results_found" />
+        android:text="@string/seems_you_don_t_follow_anyone" />
 
     <ProgressBar
         android:id="@+id/loading"
