--- a/Places/app/src/main/res/layout/item_place_feed.xml
+++ b/Places/app/src/main/res/layout/item_place_feed.xml
@@ -1,81 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:backgroundTint="#F9F7F5"
+    android:layout_margin="10dp"
+    app:cardCornerRadius="20dp"
+    app:cardElevation="5dp"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/border"
-    android:paddingTop="20dp"
-    android:paddingBottom="25dp">
+    android:layout_height="200dp">
 
     <RelativeLayout
-        android:id="@+id/rlAuthor"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/ivUserImage"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="10dp"
-            app:srcCompat="@drawable/avatar" />
-
-        <TextView
-            android:id="@+id/tvAuthorName"
+        <RelativeLayout
+            android:id="@+id/rlPlace"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@id/ivUserImage"
-            android:layout_marginHorizontal="10dp"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            tools:text="Pablo Blanco" />
+            android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/tvUsername"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tvAuthorName"
-            android:layout_toEndOf="@id/ivUserImage"
-            android:layout_marginHorizontal="10dp"
-            tools:text="\@pablo" />
+            <ImageView
+                android:id="@+id/ivImage"
+                android:layout_width="150dp"
+                android:layout_height="200dp"
+                tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+            <TextView
+                android:id="@+id/tvName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="10dp"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/black"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                android:layout_toEndOf="@id/ivImage"
+                tools:text="Rupestre Comedor Rumano" />
+
+            <TextView
+                android:id="@+id/tvCategory"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvName"
+                android:layout_marginTop="10dp"
+                android:paddingHorizontal="7dp"
+                android:paddingVertical="5dp"
+                android:layout_toEndOf="@id/ivImage"
+                android:layout_marginHorizontal="10dp"
+                android:background="@drawable/rounded_background"
+                android:backgroundTint="@color/secondary"
+                android:textColor="@color/white"
+                android:textStyle="bold"
+                android:textSize="14sp"
+                android:textAllCaps="true"
+                tools:text="ITALIAN" />
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:id="@+id/rlAuthor"
+            android:layout_margin="3dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <ImageView
+                android:id="@+id/ivUserImage"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:srcCompat="@drawable/avatar" />
+
+            <TextView
+                android:id="@+id/tvAuthorName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_toEndOf="@id/ivUserImage"
+                android:layout_marginHorizontal="10dp"
+                android:textColor="@color/black"
+                android:textStyle="bold"
+                tools:text="Pablo Blanco" />
+
+            <TextView
+                android:id="@+id/tvUsername"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tvAuthorName"
+                android:layout_toEndOf="@id/ivUserImage"
+                android:layout_marginHorizontal="10dp"
+                tools:text="\@pablo" />
+
+        </RelativeLayout>
 
     </RelativeLayout>
-    <RelativeLayout
-        android:id="@+id/rlPlace"
-        android:layout_below="@id/rlAuthor"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
 
-        <ImageView
-            android:id="@+id/ivImage"
-            android:layout_width="match_parent"
-            android:layout_height="250dp"
-            android:layout_marginVertical="10dp"
-            tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-        <TextView
-            android:id="@+id/tvName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="10dp"
-            android:textColor="@color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
-            android:layout_below="@id/ivImage"
-            tools:text="Rupestre comedor Rumano" />
-
-        <TextView
-            android:id="@+id/tvCategory"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tvName"
-            android:layout_marginHorizontal="10dp"
-            android:textColor="#555555"
-            android:textStyle="bold"
-            android:textSize="14sp"
-            android:textAllCaps="true"
-            tools:text="CATEGORY: ITALIAN" />
-
-    </RelativeLayout>
-
-</RelativeLayout>
+</androidx.cardview.widget.CardView>
