--- a/Places/app/src/main/res/layout/activity_place_detail.xml
+++ b/Places/app/src/main/res/layout/activity_place_detail.xml
@@ -265,7 +265,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="10dp"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginVertical="10dp"
                     android:textSize="16sp"
                     android:textStyle="bold"
                     android:textColor="@color/black"
@@ -279,6 +279,8 @@
                     android:textAllCaps="true"
                     android:layout_marginHorizontal="10dp"
                     android:layout_below="@id/titleEdit"
+                    android:background="@drawable/rounded_background"
+                    android:backgroundTint="@color/primary"
                     android:text="@string/make_public"/>
 
                 <Button
@@ -289,6 +291,8 @@
                     android:layout_marginHorizontal="10dp"
                     android:layout_below="@id/titleEdit"
                     android:layout_toEndOf="@id/btnPublic"
+                    android:background="@drawable/rounded_background"
+                    android:backgroundTint="@color/primary"
                     android:text="@string/delete"/>
 
             </RelativeLayout>
