--- a/Places/app/src/main/res/layout/recommend_fragment.xml
+++ b/Places/app/src/main/res/layout/recommend_fragment.xml
@@ -3,10 +3,17 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".ui.recommend.RecommendFragment"
-    android:background="@color/primary"
+    android:background="@color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="?attr/actionBarSize">
+
+<RelativeLayout
+    android:id="@+id/rlTitle"
+    android:background="@drawable/bottom_rounded_background"
+    android:backgroundTint="@color/primary"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content" >
 
     <TextView
         android:id="@+id/title"
@@ -20,18 +27,23 @@
         android:layout_marginHorizontal="10dp"
         android:text="@string/top_recommendations_for_you" />
 
+</RelativeLayout>
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvPlaces"
         android:visibility="gone"
-        android:layout_below="@id/title"
+        android:background="@color/white"
+        android:layout_below="@id/rlTitle"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
     <ProgressBar
         android:id="@+id/loading"
         android:visibility="visible"
-        android:layout_below="@id/title"
-        android:indeterminateTint="@color/white"
+        android:layout_marginTop="30dp"
+        android:layout_below="@id/rlTitle"
+        android:indeterminateTint="@color/primary"
         style="?android:attr/progressBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
