--- a/Places/app/src/main/res/layout/activity_profile.xml
+++ b/Places/app/src/main/res/layout/activity_profile.xml
@@ -47,20 +47,22 @@
     <Button
         android:id="@+id/btnFollow"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_alignParentEnd="true"
+        android:background="@drawable/rounded_background"
         android:layout_marginTop="20dp"
         android:layout_marginHorizontal="10dp"
         android:text="@string/follow" />
 
     <ImageButton
         android:id="@+id/btnNotify"
-        android:layout_width="55dp"
-        android:layout_height="40dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:gravity="center"
         android:layout_toStartOf="@id/btnFollow"
         android:layout_marginTop="20dp"
-        android:background="@color/primary"
+        android:background="@drawable/rounded_background"
+        android:backgroundTint="@color/primary"
         android:src="@drawable/icon_bell" />
 
     <TextView
